creates json example

--- a/advanced/concurrency/sched.logs.template
+++ b/advanced/concurrency/sched.logs.template
@@ -89,7 +89,14 @@ syscalltick 为什么激增？
 Go 调度器之所以需要频繁进行抢占、让出和重新绑定 P 与 M，是因为 goroutine 数量通常远多于 CPU 核心数，
 而 Go 必须保证调度公平、避免单个 goroutine 长时间霸占 CPU，同时还要确保 GC 和其他 goroutine 能及时运行；
 在 GOMAXPROCS 较小、存在大量 CPU 密集型 goroutine 的情况下，调度器只能通过异步抢占正在运行的 goroutine、
-将 P 从可能阻塞的 M 上解绑并重新分配给其他 M，来维持系统整体的可响应性和吞吐量，这种频繁调度是 Go 运行时为并发安全与可抢占 GC 所付出的必要成本。
+将 P 从可能阻塞的 M 上解绑并重新分配给其他 M，来维持系统整体的可响应性和吞吐量。Go 1.14+ 的异步抢占：
+- runtime 向正在运行的 M 发送信号
+- 信号是内核机制（tgkill / pthread_kill）
+👉 这会走 syscall 路径
+👉 会增加 syscalltick
+
+在高调度压力场景下，由于大量 goroutine 抢占、同步和 IO 操作，M 更频繁地进入 runtime 无法判定为非阻塞的系统调用路径，
+调度器为了避免 P 被绑死在潜在阻塞的 M 上，会主动、频繁地将 P 与 M 解耦并重新分配，这是维持并行度而非调度失效的表现。
 
 ...
 
